--- a/week5/AllTests.html
+++ b/week5/AllTests.html
@@ -6,14 +6,26 @@
 </head>
 <body>
 
-    <script src="function/function.js"></script>
-    <script src="function/functionTest.js"></script>
+    <script>
+        const testNames = [
+            "function",
+            "lambda",
+            "snake"
+        ];
+        testNames.forEach( name => {
+            document.writeln(`<script src="${name}/${name}.js"/></` + 'script>');
+            document.writeln(`<script src="${name}/${name}Test.js"/></` + 'script>');
+        });
+    </script>
 
-    <script src="lambda/lambda.js"></script>
-    <script src="lambda/lambdaTest.js"></script>
+<!--    <script src="function/function.js"></script>-->
+<!--    <script src="function/functionTest.js"></script>-->
 
-    <script src="snake/snake.js"></script>
-    <script src="snake/snakeTest.js"></script>
+<!--    <script src="lambda/lambda.js"></script>-->
+<!--    <script src="lambda/lambdaTest.js"></script>-->
+
+<!--    <script src="snake/snake.js"></script>-->
+<!--    <script src="snake/snakeTest.js"></script>-->
 
 
 </body>
