--- a/week10/async.html
+++ b/week10/async.html
@@ -11,7 +11,10 @@
 <script>
     // Example
 
-    // fetch('https://jsonplaceholder.typicode.com/todos/1')
+    fetch('https://jsonplaceholder.typicode.com/todos/1')
+        .then( resp => resp.json() )
+        .then( json => out.textContent = json.title )
+        .catch( err => console.error(err) );
 
 </script>
 
