--- a/week11/excel/View.html
+++ b/week11/excel/View.html
@@ -18,7 +18,7 @@
 <button onclick="refresh()">Calculate</button>
 
 <script src="../dataflow/dataflow.js"></script>
-<script src="excel.js"></script>
+<script src="excel-homework.js"></script>
 
 </body>
 
